<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="credits_email_chooser_header">Send e-mail…</string>
    <string name="credits_hase_position">Developer</string>
    <string name="error_invalid_link">Invalid link.</string>
    <string name="error_no_app_to_share">No app to share was found.</string>
    <string name="main_toolbar_expanded_title">Passos\ndo Impeachment</string>
    <string name="main_toolbar_shrunk_title">Passos do Impeachment</string>
    <string name="main_toolbar_tablet_title">Passos do Impeachment</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_drawer_credits">Credits</string>
    <string name="nav_drawer_feedback">Feedback</string>
    <string name="nav_drawer_news_list">News</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_opensource">Opensource</string>
    <string name="nav_drawer_step_list">Steps</string>
    <string name="nav_drawer_sync_title">Last update</string>
    <string name="nav_drawer_title">Passos do Impeachment</string>
    <string name="news_item_access_button">Open</string>
    <string name="news_item_share_button">Share</string>
    <string name="news_toolbar_shrunk_title">Impeachment News</string>
    <string name="news_toolbar_tablet_title">News</string>
    <string name="notification_default_message">Latest news published.</string>
    <string name="notification_default_title">Impeachment Update</string>
    <string name="share_main_chooser_header">Share the impeachment process...</string>
    <string name="share_main_text">%1$d of %2$d steps of the impeachment process completed. Follow with: %3$s</string>
    <string name="share_news_item_chooser_header">Share this news...</string>
    <string name="share_news_item_text">%1$s. %2$s</string>
    <string name="share_step_detail_chooser_header">Share the impeachment process...</string>
    <string name="share_step_detail_state_completed">completed in</string>
    <string name="share_step_detail_state_incomplete">on going until</string>
    <string name="share_step_detail_text">Step %1$d of %2$d %3$s %4$s. %5$s Follow with: %6$s</string>
    <string name="step_detail_description_empty">No description.</string>
    <string name="step_item_completed_in">Completed in %1$s</string>
    <string name="sync_done">Update completed successfully.</string>
    <string name="sync_fail">There was a problem downloading content, will retry automatically.</string>
    <string name="sync_first">Downloading content...</string>
    <string name="sync_manual_request_started">Updates are automatic.</string>
    <string name="sync_never_updated">Never</string>
    <string name="sync_on_going">Update in progress.</string>
    <string name="title_activity_credits">Credits</string>
    <string name="step_detail_middle_of_numbers">of</string>
    <string name="credits_toolbar_shrunk_title">Credits</string>
    <string name="app_feedback_url" translatable="false">http://goo.gl/forms/WMEJrpocfj</string>
    <string name="app_name" translatable="false">Passos do Impeachment</string>
    <string name="app_opensource_url" translatable="false">https://goo.gl/xFTz4f</string>
    <string name="app_play_store_short_url" translatable="false">https://goo.gl/W30vp7</string>
    <string name="credits_hase_email" translatable="false">hasegawa.aran@gmail.com</string>
    <string name="credits_hase_email_subject" translatable="false">[Passos do Impeachment]</string>
    <string name="credits_hase_github" translatable="false">AranHase</string>
    <string name="credits_hase_github_url" translatable="false">https://github.com/AranHase</string>
    <string name="credits_hase_name" translatable="false">Allan Yoshio Hasegawa</string>
    <string name="title_activity_step_detail" translatable="false">StepDetailActivity</string>
</resources>