<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:layout_width="@dimen/news_width"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginBottom="8dp"
                                    android:layout_marginLeft="8dp"
                                    android:layout_marginRight="8dp"
                                    android:layout_marginTop="8dp"
                                    app:cardCornerRadius="0dp"
                                    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/colorSecondary"
            android:orientation="vertical">

            <TextView
                android:id="@+id/important_news_title_tv"
                style="@style/DetailLinkTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#DFFF"
                />

            <TextView
                android:id="@+id/important_news_url_tv"
                style="@style/DetailLinkUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#AFFF"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/important_news_tldr_tv"
            style="@style/DetailLinkUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/important_news_share_bt"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_weight="0.5"
                android:text="@string/news_item_share_button"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/important_news_open_bt"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_weight="0.5"
                android:text="@string/news_item_access_button"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"/>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>